--- a/new-game.html
+++ b/new-game.html
@@ -69,6 +69,7 @@
             <a href="index.html">HOME</a>
             <a href="new-game.html">NEW GAMES</a>
             <a href="top-games.html">TOP GAMES</a>
+            <a href="contact.html">CONTACT US</a>
         </div>
         <div class="right-controls">
             <button class="bookmark-btn" onclick="showBookmarks()">
